# laps

./: .gitignore  .stylish-haskell.yaml  Cargo.toml  IDEAS.md  Laps.dhall  Laps.toml  Main.hs  README.md  Types.dhall  default.nix  laps.cabal  package.dhall  release.nix  sys.rs
doc/: dependencies-implementation.md  dependencies.md
nix/: haskell-deps.nix  laps.nix  nixpkgs.nix
src/: Laps.hs  Main.hs  OrphanInstances.hs  main.rs
stm-test/: Main.hs
tests/: Main.hs
tests/deserialization/: nested.dhall  nested.golden  single.dhall  single.golden
