[package]
name = "laps"
description = "Project automation tool"
version = "0.1.0"
authors = ["Laurens Duijvesteijn <git@duijf.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
ctrlc = "3.1"
nix =  "0.17"
thiserror =  "1.0"
toml = "0.5"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
