cabal-version:       >=1.10
name:                laps
version:             0.0.1.0-unreleased
author:              Laurens Duijvesteijn
maintainer:          git@duijf.io
build-type:          Simple

executable laps
  main-is:             Main.hs
  build-depends:
    ansi-terminal,
    base,
    containers,
    data-fix,
    dhall,
    pretty-simple,
    recursion-schemes,
    string-conversions,
    text,
    typed-process,
    unix
  default-language:    Haskell2010
  default-extensions:
    DeriveAnyClass,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    InstanceSigs,
    LambdaCase,
    MultiParamTypeClasses,
    NamedFieldPuns,
    OverloadedStrings,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications
