cabal-version:       3.0
name:                laps
version:             0.0.1.0-unreleased
author:              Laurens Duijvesteijn
maintainer:          git@duijf.io

flag release
  description: Release build?
  default: False
  Manual: True

common release
  ghc-options: -Werror

common sanity
  default-lanaguage: Haskell2010
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-exported-signatures
    -Wpartial-fields
  default-extensions:
    DeriveAnyClass,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    InstanceSigs,
    LambdaCase,
    MultiParamTypeClasses,
    NamedFieldPuns,
    OverloadedStrings,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications

executable laps
  import: sanity

  if flag(release)
    import: release

  main-is: Main.hs
  build-depends:
    ansi-terminal,
    base,
    containers,
    data-fix,
    dhall,
    pretty-simple,
    recursion-schemes,
    string-conversions,
    text,
    typed-process,
    unix
