cabal-version:       3.0
name:                laps
version:             0.0.1.0-unreleased
author:              Laurens Duijvesteijn
maintainer:          git@duijf.io

flag release
  description: Release build?
  default: False
  Manual: True

common release
  ghc-options: -Werror

common sanity
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-exported-signatures
    -Wpartial-fields
  default-extensions:
    DeriveAnyClass,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    InstanceSigs,
    LambdaCase,
    MultiParamTypeClasses,
    NamedFieldPuns,
    OverloadedStrings,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications

common deps
  build-depends:
    ansi-terminal,
    base,
    containers,
    conduit,
    conduit-extra,
    data-fix,
    dhall,
    pretty-simple,
    recursion-schemes,
    stm-conduit,
    stm-chans,
    string-conversions,
    text,
    typed-process,
    unix

library
  import: deps, sanity
  hs-source-dirs: src
  exposed-modules:
    Laps,
    OrphanInstances

executable laps
  import: deps, sanity

  if flag(release)
    import: release

  main-is: bin/Laps.hs

  build-depends:
    laps

executable stm-test
  import: deps, sanity

  if flag(release)
    import: release

  main-is: stm-test/Main.hs

  build-depends:
    laps

test-suite tasty
  import: deps, sanity

  type: exitcode-stdio-1.0

  hs-source-dirs: tests
  main-is: Main.hs

  build-depends:
    bytestring,
    filepath,
    laps,
    tasty,
    tasty-golden
